2008-05-23  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/MarbleWidget.cpp:
    * src/lib/SphericalScanlineTextureMapper.cpp:
    * src/lib/Projections/SphericalProjection.h:
    * src/lib/PlaceMarkLayout.cpp:
    * src/lib/PlaceMarkPainter.cpp:
    * src/lib/MarbleMap.cpp:
    * src/lib/TextureColorizer.cpp:
    * src/lib/ViewParams.cpp:
    * src/lib/ViewParams.h:
    * src/lib/MarbleModel.cpp:
    * src/lib/VectorComposer.cpp:
    * src/lib/GridMap.cpp:

    Fix includes.

2008-05-23  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/ViewParams.cpp:
    * src/lib/ViewParams.h:

    D-pointerfy class ViewParams.

2008-05-23  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/SphericalScanlineTextureMapper.cpp:
    * src/lib/PlaceMarkLayout.cpp:
    * src/lib/MarbleMap.cpp:
    * src/lib/EquirectScanlineTextureMapper.cpp:
    * src/lib/TextureColorizer.cpp:
    * src/lib/ViewParams.cpp:
    * src/lib/ViewParams.h:
    * src/lib/MarbleModel.cpp:
    * src/lib/VectorComposer.cpp:

    Declare member variables of class ViewParams private in order
    to prepare d-pointerfication.

2008-05-23  Inge Wallin  <inge@lysator.liu.se>

	Move handling of the active region to the projection helpers.
	* Projections/AbstractProjectionHelper.{h,cpp},
	* Projections/SphericalProjectionHelper.{h,cpp},
	* Projections/MercatorProjectionHelper.{h,cpp},
	* Projections/EquirectProjectionHelper.{h,cpp}:
	(activeRegion): moved from MarbleWidget
	(setActiveRegion): moved from MarbleWidget
	* Projections/AbstractProjectionHelper_p.h: new file
	* src/lib/MarbleWidget.cpp (activeRegion): call function in the
	projection helpers
	(setActiveRegion): call function in the projection helpers 

	* src/lib/MarbleWidgetInputHandler.cpp (restoreViewContext): Stop
	the timer when we redraw with high quality.  It seems the timer
	otherwise refires every X milliseconds.

2008-05-23  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * TODO:

    Add expiration and search for OpenStreetMap.
